--- a/packages/memory-inspector/src/browser/style/index.css
+++ b/packages/memory-inspector/src/browser/style/index.css
@@ -428,11 +428,17 @@ table.t-mv-view .t-mv-view-address {
 }
 
 .memory-edit-button-container {
+    position: relative;
     padding: var(--theia-ui-padding) 0;
     width: 100%;
     display: flex;
     justify-content: center;
     box-shadow: 0px 6px 6px 6px var(--theia-widget-shadow);
+}
+
+.memory-edit-button-container .memory-edit-error {
+    position: absolute;
+    width: 100%;
 }
 
 .memory-diff-select {
