--- a/packages/memory-inspector/src/browser/style/index.css
+++ b/packages/memory-inspector/src/browser/style/index.css
@@ -428,7 +428,6 @@ table.t-mv-view .t-mv-view-address {
 }
 
 .memory-edit-button-container {
-    position: relative;
     padding: var(--theia-ui-padding) 0;
     width: 100%;
     display: flex;
@@ -437,15 +436,14 @@ table.t-mv-view .t-mv-view-address {
 }
 
 .memory-edit-button-container .memory-edit-error {
-    position: absolute;
     width: 100%;
+    height: 100%;
     bottom: 0;
     box-sizing: border-box;
     white-space: normal;
     padding: var(--theia-ui-padding);
     background-color: var(--theia-editor-background);
     color: var(--theia-editorWarning-foreground);
-    z-index: 100;
 }
 
 .memory-diff-select {
