--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -276,6 +276,7 @@ button.secondary[disabled], .theia-button.secondary[disabled] {
     border: 1px solid var(--theia-dropdown-border);
     background: var(--theia-dropdown-background);
     outline: none;
+    cursor: pointer;
 }
 
 .theia-select option {
