debug: fix `watch` expression errors
The commit updates `watch` expressions so we respect the proper error
from the DAP and not hardcode to a value we define. The changes also
update the styling to align with VS Code.

Signed-off-by: vince-fugnitto <vincent.fugnitto@ericsson.com>

--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -204,6 +204,11 @@
     margin: auto;
 }
 
+.theia-debug-console-variable .watch-error {
+    font-style: italic;
+    color: var(--theia-debugConsole-errorForeground);
+}
+
 /** Editor **/
 
 .theia-debug-breakpoint-icon {
