Allow to remove watch expressions one by one

--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -169,7 +169,7 @@
 }
 
 .theia-debug-console-variable {
-    width: 100%;
+    display: flex;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
