added a max height and overflow auto to the select-component-dropdown, so that the dropdown can't get bigger than the
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/core/src/browser/style/select-component.css
+++ b/packages/core/src/browser/style/select-component.css
@@ -47,6 +47,7 @@
     outline: var(--theia-focusBorder) solid 1px;
     outline-offset: -1px;
     user-select: none;
+    overflow: auto;
 }
 
 .theia-select-component-dropdown .theia-select-component-option {
