--- a/packages/core/src/browser/style/dialog.css
+++ b/packages/core/src/browser/style/dialog.css
@@ -64,7 +64,10 @@
     justify-content: space-around;
     align-items: stretch;
     position: relative;
-    padding: calc(var(--theia-ui-padding)*2);
+    margin: calc(var(--theia-ui-padding)*2);
+    white-space: pre-line;
+    max-height: 50vh;
+    overflow-y: auto;
 }
 
 .p-Widget.dialogOverlay .dialogControl {
