--- a/packages/core/src/browser/style/dialog.css
+++ b/packages/core/src/browser/style/dialog.css
@@ -76,7 +76,7 @@
 
 .p-Widget.dialogOverlay .dialogControl {
     padding: calc(var(--theia-ui-padding)*2);
-    padding-top: 0px;
+    padding-top: var(--theia-ui-padding);
     display: flex;
     flex-direction: row;
     align-content: right;
