style: sidepanel styling - hidden title quick fix
This commit aims to fix the issue of titles being totally occluded when
the sidebar is dragged to its minimum width.

Signed-off-by: FernandoAscencio <fernando.ascencio.cama@ericsson.com>

--- a/packages/core/src/browser/style/sidepanel.css
+++ b/packages/core/src/browser/style/sidepanel.css
@@ -318,6 +318,7 @@
     margin-left: 14px;
     text-transform: uppercase;
     font-size: var(--theia-ui-font-size0);
+    min-width: 1rem;
 }
 
 .theia-sidepanel-toolbar .p-TabBar-toolbar .item {
