--- a/packages/core/src/browser/style/dialog.css
+++ b/packages/core/src/browser/style/dialog.css
@@ -65,11 +65,17 @@
     align-items: stretch;
     position: relative;
     padding: calc(var(--theia-ui-padding)*2);
+    white-space: pre-line;
+    max-height: 50vh;
+    overflow-y: auto;
+}
+
+.p-Widget.dialogOverlay .dialogContent > * {
+    height: 100%;
 }
 
 .p-Widget.dialogOverlay .dialogControl {
     padding: calc(var(--theia-ui-padding)*2);
-    padding-top: 0px;
     display: flex;
     flex-direction: row;
     align-content: right;
