--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -169,7 +169,6 @@
 }
 
 .theia-debug-console-variable {
-    display: flex;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -207,6 +206,10 @@
 .theia-debug-console-variable .watch-error {
     font-style: italic;
     color: var(--theia-debugConsole-errorForeground);
+}
+
+.theia-debug-watch-expression {
+    display: flex;
 }
 
 /** Editor **/
