style: quick input widget size fix
This commit implements quick-input-widget size change with respect to app size, as well as handling text overflow resulting from this.

There are issues regarding specific cases with the overflow handling.

Signed-off-by: FernandoAscencio <fernando.ascencio.cama@ericsson.com>

--- a/packages/monaco/src/browser/style/index.css
+++ b/packages/monaco/src/browser/style/index.css
@@ -99,8 +99,6 @@
 
 /* Monaco Quick Input */
 .quick-input-widget {
-  width: 600px !important;
-  margin-left: -300px !important;
   background-color: var(--theia-quickInput-background) !important;
   color: var(--theia-foreground) !important;
 }
@@ -121,6 +119,7 @@
   .monaco-icon-label-container
   > .monaco-icon-name-container {
   display: flex !important;
+  overflow: hidden;
 }
 
 .quick-input-list .monaco-list-row.focused {
@@ -170,15 +169,6 @@
   line-height: 22px;
 }
 
-.quick-input-list
-  .quick-input-list-rows
-  > .quick-input-list-row
-  .monaco-icon-label
-  .monaco-icon-label-container
-  > .monaco-icon-name-container {
-  flex: 0 !important;
-}
-
 .quick-input-list-rows
   .quick-input-list-row
   .monaco-icon-label
@@ -198,6 +188,8 @@
     font-family: var(--theia-ui-font-family);
     font-size: var(--theia-ui-font-size1) !important;
     color: var(--theia-foreground) !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .quick-input-list .monaco-icon-label::before {
