plugin: ThemeIcon Support
Finishes Estelle's changes to support Themables.

--- a/packages/scm/src/browser/style/index.css
+++ b/packages/scm/src/browser/style/index.css
@@ -219,6 +219,12 @@
     font-size: var(--theia-ui-font-size0);
 }
 
+.theia-scm .scmItem .decoration-icon {
+    height: 16px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
 .scm-change-count {
     float: right;
 }
