--- a/packages/core/src/browser/style/tree.css
+++ b/packages/core/src/browser/style/tree.css
@@ -100,6 +100,8 @@
 .theia-Tree:focus-within .theia-TreeNode.theia-mod-selected {
     background: var(--theia-list-activeSelectionBackground);
     color: var(--theia-list-activeSelectionForeground) !important;
+    outline: var(--theia-focusBorder) solid 1px;
+    outline-offset: -1px;
 }
 
 .theia-Tree:focus-within .theia-TreeNode.theia-mod-selected .theia-TreeNodeTail,
