--- a/packages/filesystem/src/browser/style/file-dialog.css
+++ b/packages/filesystem/src/browser/style/file-dialog.css
@@ -202,3 +202,10 @@
 .dialogContent .theia-ControlPanel > * {
     margin-left: 4px;
 }
+
+.dialogContent .theia-ToggleHiddenInputContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: var(--theia-ui-padding);
+}
