--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -39,6 +39,7 @@
   flex: 1;
   line-height: var(--theia-content-line-height);
   padding: 3px 0 3px 4px;
+  resize: none;
 }
 
 .t-siw-search-container #search-input-field:focus {
@@ -99,10 +100,12 @@
 }
 
 .t-siw-search-container .searchHeader .search-field .option-buttons {
-  height: 23px;
-  display: flex;
-  align-items: center;
-  background-color: none;
+    height: 23px;
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    background-color: none;
+    margin: 2px;
 }
 
 .t-siw-search-container .searchHeader .search-field-container.tooManyResults {
@@ -257,6 +260,13 @@
   border-style: dashed;
 }
 
+.t-siw-search-container .resultLine .match-line-num {
+    font-size: .9em;
+    margin-left: 7px;
+    margin-right: 4px;
+    opacity: .7;
+}
+
 .t-siw-search-container .noWrapInfo {
   width: 100%;
 }
@@ -346,10 +356,11 @@
 }
 
 .replace-all-button-container {
-  width: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 25px;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding-top: 3px;
 }
 
 .result-node-buttons .replace-result {
