Introduce dynamic tab resizing strategy
Part of #12328

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -54,10 +54,12 @@
 }
 
 .p-TabBar[data-orientation='horizontal'] .p-TabBar-tab .theia-tab-icon-label,
-.p-TabBar-tab.p-mod-drag-image .theia-tab-icon-label  {
-    display: flex;
-    line-height: var(--theia-content-line-height);
-    align-items: center;
+.p-TabBar-tab.p-mod-drag-image .theia-tab-icon-label {
+  flex: 1 1 0px;
+  display: flex;
+  line-height: var(--theia-content-line-height);
+  align-items: center;
+  overflow: hidden;
 }
 
 
@@ -112,10 +114,14 @@
   display: inline-block;
 }
 
+.p-TabBar.theia-app-centers .p-TabBar-tabLabel {
+  flex: 1 1 0;
+}
+
 .p-TabBar.theia-app-centers .p-TabBar-tabLabelDetails {
   margin-left: 5px;
   color: var(--theia-descriptionForeground);
-  flex: 1 1 auto;
+  flex: 1 1 0;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -213,6 +219,7 @@
   user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  flex-shrink: 0;
 }
 
 .p-TabBar.theia-app-centers .p-TabBar-tab.p-mod-closable > .p-TabBar-tabCloseIcon:hover {
@@ -330,6 +337,7 @@
 .p-TabBar-toolbar {
   z-index: var(--theia-tabbar-toolbar-z-index); /* Due to the scrollbar (`z-index: 1000;`) it has a greater `z-index`. */
   display: flex;
+  flex: 0 0 auto;
   flex-direction: row-reverse;
   padding: 4px;
   padding-left: 0px;
@@ -406,6 +414,7 @@
 }
 
 .theia-tabBar-tab-row {
+  flex: 1 1;
   display: flex;
   flex-flow: row nowrap;
   min-width: 100%;
