More review feedback
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -415,7 +415,7 @@
   flex: 1;
 }
 
-.p-TabBar-tab.p-mod-closable:hover .theia-tab-icon-label,
-.p-TabBar-tab.p-mod-current .theia-tab-icon-label {
+.p-TabBar[data-orientation='horizontal'] .p-TabBar-tab.p-mod-closable:hover .theia-tab-icon-label,
+.p-TabBar[data-orientation='horizontal'] .p-TabBar-tab.p-mod-current .theia-tab-icon-label {
   overflow: hidden;
 }
