style: Indent decoration blocked poiter events.
This commit fixes a small issue where the indent decoration blocked
right and left clicks. Thus reducing the effective area of selection.

Signed-Off-By: FernandoAscencio <fernando.ascencio.cama@ericsson.com>

--- a/packages/core/src/browser/style/tree.css
+++ b/packages/core/src/browser/style/tree.css
@@ -177,6 +177,7 @@
     position: absolute;
     height: var(--theia-content-line-height);
     border-right: var(--theia-border-width) solid transparent;
+    pointer-events: none;
 }
 
 .theia-tree-node-indent.always,
