Fix tab detaching behaviour
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -358,7 +358,7 @@
 }
 
 .p-TabBar-content-container {
-  display: block;
+  display: flex;
   flex: 1;
   position: relative; /* This is necessary for perfect-scrollbar */
 }
