fix monaco suggest list highlight color overlap in light theme
Signed-off-by: venciallee <venciallee@gmail.com>

--- a/packages/monaco/src/browser/style/index.css
+++ b/packages/monaco/src/browser/style/index.css
@@ -255,6 +255,10 @@
   background-color: var(--theia-input-background) !important;
 }
 
+.monaco-editor .suggest-widget .monaco-list .monaco-list-row.focused>.contents>.main .monaco-highlighted-label .highlight {
+    color: var(--vscode-editorSuggestWidget-focusHighlightForeground) !important;
+}
+
 .symbol-icon-center {
   align-self: center;
   margin-right: 4px;
