Enhance shrinking behavior in view container part headers
This commit makes labels in view container part headers shrinkable
and disables flex-shrinking for view container part title toolbars.

Fixes #12541.

--- a/packages/core/src/browser/style/view-container.css
+++ b/packages/core/src/browser/style/view-container.css
@@ -96,7 +96,7 @@
 }
 
 .theia-view-container-part-header .label {
-    flex: 0;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -152,6 +152,7 @@
 }
 
 .p-TabBar-toolbar.theia-view-container-part-title {
+    flex: none;
     padding: 0px;
     padding-right: calc(var(--theia-ui-padding)*2/3);
 }
