plugin: ThemeIcon Support in SCM
Finishes Estelle's changes to support Themables.

Signed-off-by: FernandoAscencio <fernando.ascencio.cama@ericsson.com>
Co-Authored-By: Estelle

--- a/packages/scm/src/browser/style/index.css
+++ b/packages/scm/src/browser/style/index.css
@@ -219,6 +219,10 @@
     font-size: var(--theia-ui-font-size0);
 }
 
+.theia-scm .decoration-icon {
+    margin: 2px 0px;
+}
+
 .scm-change-count {
     float: right;
 }
