Remove spacing next to the file preference browse button

--- a/packages/preferences/src/browser/style/preference-file.css
+++ b/packages/preferences/src/browser/style/preference-file.css
@@ -26,5 +26,7 @@
 }
 
 .theia-settings-container .preference-file-button {
-  margin-left: 4px;
+  margin-left: 0px;
+  padding-bottom: 6px;
+  padding-top: 5px;
 }
