core: improve responsiveness of input fields (#12604)
The commit improves the responsiveness of input fields when resizing by including ellipsis when overflowing which is consistent in behavior with the rest of the application, and vscode. The changes are global to all text input fields.

Signed-off-by: Vlad Arama <vlad.arama@ericsson.com>

--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -120,8 +120,17 @@ blockquote {
   padding-left: 5px;
 }
 
+.theia-input[type="text"] {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .theia-input::placeholder {
   color: var(--theia-input-placeholderForeground);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .theia-maximized {
