fix regression induced by PR-12604

--- a/packages/vsx-registry/src/browser/style/index.css
+++ b/packages/vsx-registry/src/browser/style/index.css
@@ -39,6 +39,7 @@
 }
 
 .theia-vsx-extensions-search-bar .theia-input {
+  overflow: hidden;
   line-height: var(--theia-content-line-height);
   flex: 1;
   padding-top: calc(var(--theia-ui-padding) / 2);
