Add preference for visualPreview on hover
Made window.tabbar.enhancedPreview an enum preference with these options:
- classic: a simple unstyled preview, containing the name
- enhanced: a styled preview containing title and caption (#12350)
- visual: the enhanced preview +  visual preview of the view
Extended the hover service so that it supports the visual preview.
Added the `PreviewableWidget` interface.
Widgets, implementing this interface, can be previewed once they were loaded.
The loaded flag is set to true when a widget is set to active.
Widgets implementing the interface can specify how the preview should look like.
The default is simply the node of the widget.
Webviews are currently not previewable, as they raise some challenges.
For example, scripts in the webviews would need to be handled/blocked.
Therefore, an approach for webviews should be tackled in a follow up.

Fixes #12646

Contributed on behalf of STMicroelectronics

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -470,6 +470,16 @@
   margin: 0px 4px;
 }
 
+.enhanced-preview-div {
+  margin: 4px 4px;
+  pointer-events: none;
+  background: var(--theia-editor-background);
+}
+
+.enhanced-preview {
+  transform-origin: top left;
+}
+
 .theia-horizontal-tabBar-hover-title {
   font-weight: bolder;
   font-size: medium;
