Adjust border radius of select and alerts

--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -292,7 +292,7 @@ button.secondary[disabled],
 .theia-select {
   color: var(--dropdown-foreground);
   font-size: var(--theia-ui-font-size1);
-  border-radius: 0;
+  border-radius: 2px;
   border: 1px solid var(--theia-dropdown-border);
   background: var(--theia-dropdown-background);
   outline: none;
