Don't cover input field with file preference browse button (#12586)
The button is now next to the input field instead of on top of it, and thus the button does not cover the end of the input field for long paths.

Fixes https://github.com/eclipse-theia/theia/issues/12582. 

Signed-off-by: William Pearson <w.pearson@samsung.com>

--- a/packages/preferences/src/browser/style/preference-file.css
+++ b/packages/preferences/src/browser/style/preference-file.css
@@ -26,7 +26,6 @@
 }
 
 .theia-settings-container .preference-file-button {
-  position: absolute;
-  padding: 2px 9px;
-  right: 4px;
+  margin-left: 0px;
+  height: calc(var(--theia-content-line-height) + 4px);
 }
