ui/ux: use color variable instead of hardcoding

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -89,7 +89,7 @@
 }
 
 .t-siw-search-container .searchHeader .search-field .option.enabled {
-  color: rgb(255, 255, 255); ;
+  color: var(--theia-inputOption-activeForeground);
   border: var(--theia-border-width) var(--theia-inputOption-activeBorder) solid;
   background-color: var(--theia-inputOption-activeBackground);
   opacity: 1;
