Scale previews to 16:9 aspect ratio
This way the size of the previews is more uniform.
If the view is wider than 16:9 the scaling is according to the width.
If the view is longer  than 16:9 the scaling is according to the height.
The other dimension is then cropped.

Contributed on behalf of STMicroelectronics

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -474,6 +474,8 @@
   margin: 4px 4px;
   pointer-events: none;
   background: var(--theia-editor-background);
+  position: relative;
+  overflow: hidden;
 }
 
 .enhanced-preview {
