Fix small issue with hover-title and -caption css
Before the two fields ignored the max-width.

Contributed on behalf of STMicroelectronics

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -484,12 +484,16 @@
 
 .theia-horizontal-tabBar-hover-title {
   font-weight: bolder;
+  max-width: var(--theia-hover-max-width);
+  word-wrap: break-word;
   font-size: medium;
   margin: 0px 0px;
 }
 
 .theia-horizontal-tabBar-hover-caption {
   font-size: small;
+  max-width: var(--theia-hover-max-width);
+  word-wrap: break-word;
   margin: 0px 0px;
   margin-top: 4px;
 }
